--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
     {{ thisyear }}
     {% if site.owner %}{{ site.owner }}{% else %}{{ site.title }}{% endif %}</li>
     <li><a href="mailto:Cynthia@insurancehousingprovider.com">Cynthia@insurancehousingprovider.com</a></li>
-    <li>Phone: 203-993-4389</li>
+    <li>Phone: <a href="tel:203-993-4389">203-993-4389</a></li>
     <!--
     <li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
     <li>Built with: <a href="http://jekyllrb.com" target="_blank">Jekyll</a></li>
